--- a/package.xml
+++ b/package.xml
@@ -45,11 +45,13 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>ohm_poseLaser_msgs</build_depend>
   <build_depend>tf</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>ohm_poseLaser_msgs</run_depend>
   <run_depend>tf</run_depend>
 
 
